--- a/MySecondApp/MySecondApp/MySecondApp/Views/DevicePage.xaml
+++ b/MySecondApp/MySecondApp/MySecondApp/Views/DevicePage.xaml
@@ -11,6 +11,7 @@
             <Button Text="{Binding ConnectText}" Command="{Binding ConnectionToggle}" />
             <Button Text="Request MTU" Command="{Binding RequestMtu}" />
             <Button Text="{Binding PairingText}" Command="{Binding PairToDevice}" />
+            <Button Text="Scan Chara" Command="{Binding ScanChar}" />
             <Label Text="{Binding Rssi, StringFormat='RSSI: {0}'}" />
 
             <ListView ItemsSource="{Binding GattCharacteristics}"
